--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--В <head> сайта один раз добавьте код загрузчика-->
+<script>window.yaContextCb = window.yaContextCb || []</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
     <link rel="stylesheet" href="style.css">
     <title>test_market</title>
 </head>
@@ -26,7 +29,27 @@
         <div id="text_block">
             <h1 >What is this? </h1>
             <p style="margin-top: 30px;margin-bottom: 50px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta mollitia deserunt ex facilis id atque qui aliquid dolorem temporibus consectetur voluptates hic, est iste laboriosam aut sed quo, tenetur odio?</p>
-            <div id="mb_3"></div>
+            <div id="mb_3">
+            <!--AdFox START-->
+<!--yandex_test.kirsanov-->
+<!--Площадка: https://test-ilya.github.io/test_mark/ / https://test-ilya.github.io/test_mark/ / test-mark-->
+<!--Категория: <не задана>-->
+<!--Тип баннера: 240x400-->
+<div id="adfox_167766257387635458"></div>
+<script>
+    window.yaContextCb.push(()=>{
+        Ya.adfoxCode.create({
+            ownerId: 1456522,
+            containerId: 'adfox_167766257387635458',
+            params: {
+                p1: 'cxlnc',
+                p2: 'hiut'
+            }
+        })
+    })
+</script>
+
+            </div>
             <div id="mb_4"></div>
             <div id="mb_5"></div>
         </div>
