--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
             <h1 >What is this? </h1>
             <p style="margin-top: 30px;margin-bottom: 50px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta mollitia deserunt ex facilis id atque qui aliquid dolorem temporibus consectetur voluptates hic, est iste laboriosam aut sed quo, tenetur odio?</p>
             <div id="mb_3">
-                <!--AdFox START-->
-                <!--yandex_test.kirsanov-->
-                <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
-                <!--Тип баннера: 240x400-->
-                <!--Расположение: середина страницы-->
-                <div id="adfox_167767119388613895"></div>
-                <script>
-                    window.yaContextCb.push(()=>{
-                    Ya.adfoxCode.create({
+        <!--AdFox START-->
+        <!--yandex_test.kirsanov-->
+        <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / тест_блок_сайт-->
+        <!--Категория: <не задана>-->
+        <!--Тип баннера: 240x400-->
+        <div id="adfox_1677672047549915"></div>
+        <script>
+            window.yaContextCb.push(()=>{
+                Ya.adfoxCode.create({
                     ownerId: 1456522,
-                    containerId: 'adfox_167767119388613895',
+                    containerId: 'adfox_1677672047549915',
                     params: {
-                        pp: 'h',
-                        ps: 'ghnr',
+                        p1: 'cxloo',
                         p2: 'hiut'
-                            }
-                        })
-                    })
-            </script>
+                    }
+                })
+            })
+        </script>
+
             </div>
             <div id="mb_4">hello</div>
             <div id="mb_5"></div>
