--- a/index.html
+++ b/index.html
@@ -51,7 +51,28 @@
 
             </div>
             <div id="mb_4">hello</div>
-            <div id="mb_5"></div>
+            <div id="mb_5">
+            <!--AdFox START-->
+            <!--yandex_test.kirsanov-->
+            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+            <!--Тип баннера: 240x400-->
+            <!--Расположение: верх страницы-->
+            <div id="adfox_167767405506145620"></div>
+            <script>
+                window.yaContextCb.push(()=>{
+                Ya.adfoxCode.create({
+               ownerId: 1456522,
+               containerId: 'adfox_167767405506145620',
+                    params: {
+                    pp: 'g',
+                    ps: 'ghog',
+                    p2: 'hiut'
+                            }
+                         })
+                    })
+            </script>
+
+            </div>
         </div>
         <div id="mb_1"></div>
         <div id="mb_2"></div>
