--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--В <head> сайта один раз добавьте код загрузчика-->
-    <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+<script>window.yaContextCb = window.yaContextCb || []</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
+
     <link rel="stylesheet" href="style.css">
     <title>test_market</title>
 </head>
@@ -30,49 +31,28 @@
             <h1 >What is this? </h1>
             <p style="margin-top: 30px;margin-bottom: 50px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta mollitia deserunt ex facilis id atque qui aliquid dolorem temporibus consectetur voluptates hic, est iste laboriosam aut sed quo, tenetur odio?</p>
             <div id="mb_3">
-        <!--AdFox START-->
-        <!--yandex_test.kirsanov-->
-        <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / тест_блок_сайт-->
-        <!--Категория: <не задана>-->
-        <!--Тип баннера: 240x400-->
-        <div id="adfox_1677672047549915"></div>
-        <script>
-            window.yaContextCb.push(()=>{
-                Ya.adfoxCode.create({
-                    ownerId: 1456522,
-                    containerId: 'adfox_1677672047549915',
-                    params: {
-                        p1: 'cxloo',
-                        p2: 'hiut'
-                    }
-                })
-            })
-        </script>
-
-            </div>
-            <div id="mb_4">hello</div>
-            <div id="mb_5">
-            <!--AdFox START-->
-            <!--yandex_test.kirsanov-->
-            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
-            <!--Тип баннера: 240x400-->
-            <!--Расположение: верх страницы-->
-            <div id="adfox_167767405506145620"></div>
-            <script>
-                window.yaContextCb.push(()=>{
-                Ya.adfoxCode.create({
-               ownerId: 1456522,
-               containerId: 'adfox_167767405506145620',
-                    params: {
-                    pp: 'g',
-                    ps: 'ghog',
-                    p2: 'hiut'
+                <!--AdFox START-->
+                <!--yandex_test.kirsanov-->
+                <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+                <!--Тип баннера: 240x400-->
+                <!--Расположение: верх страницы-->
+                <div id="adfox_167767465527922819"></div>
+                <script>
+                    window.yaContextCb.push(()=>{
+                        Ya.adfoxCode.create({
+                            ownerId: 1456522,
+                            containerId: 'adfox_167767465527922819',
+                            params: {
+                                pp: 'g',
+                                ps: 'ghog',
+                                p2: 'hiut'
                             }
-                         })
+                        })
                     })
-            </script>
-
+                </script>
             </div>
+            <div id="mb_4"></div>
+            <div id="mb_5"></div>
         </div>
         <div id="mb_1"></div>
         <div id="mb_2"></div>
