--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
             <div id="mb_3">
                 <!--AdFox START-->
                 <!--yandex_test.kirsanov-->
-                <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+                <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / тест_блок_сайт-->
+                <!--Категория: <не задана>-->
+                <!--Баннер: <не задана>-->
                 <!--Тип баннера: 240x400-->
-                <!--Расположение: верх страницы-->
-                <div id="adfox_167767465527922819"></div>
+                <div id="adfox_167767611351239253"></div>
                 <script>
                     window.yaContextCb.push(()=>{
                         Ya.adfoxCode.create({
                             ownerId: 1456522,
-                            containerId: 'adfox_167767465527922819',
+                            containerId: 'adfox_167767611351239253',
                             params: {
-                                pp: 'g',
-                                ps: 'ghog',
-                                p2: 'hiut'
+                                p1: 'cxloo',
+                                p2: 'hiut',
+                                pfc: 'ezvbd',
+                                pfb: 'nuyvo'
                             }
                         })
                     })
                 </script>
+
             </div>
             <div id="mb_4"></div>
             <div id="mb_5"></div>
