--- a/index.html
+++ b/index.html
@@ -57,8 +57,27 @@
             <div id="mb_5"></div>
         </div>
         <div id="mb_1"></div>
-        <div id="mb_2"></div>
-       
+        <div id="mb_2">
+            <!--AdFox START-->
+            <!--yandex_test.kirsanov-->
+            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+            <!--Тип баннера: Background-->
+            <!--Расположение: середина страницы-->
+            <div id="adfox_16777390586815743"></div>
+            <script>
+                window.yaContextCb.push(()=>{
+                    Ya.adfoxCode.create({
+                        ownerId: 1456522,
+                        containerId: 'adfox_16777390586815743',
+                        params: {
+                            pp: 'h',
+                            ps: 'ghog',
+                            p2: 'hiur'
+                        }
+                    })
+                })
+            </script>
+        </div>    
         <div id="mb_6"></div>
     </main>
     <footer style="position: relative;">
