--- a/index.html
+++ b/index.html
@@ -62,21 +62,22 @@
             <!--yandex_test.kirsanov-->
             <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
             <!--Тип баннера: Background-->
-            <!--Расположение: середина страницы-->
-            <div id="adfox_16777390586815743"></div>
+            <!--Расположение: верх страницы-->
+            <div id="adfox_167774148560777915"></div>
             <script>
                 window.yaContextCb.push(()=>{
                     Ya.adfoxCode.create({
                         ownerId: 1456522,
-                        containerId: 'adfox_16777390586815743',
+                        containerId: 'adfox_167774148560777915',
                         params: {
-                            pp: 'h',
+                            pp: 'g',
                             ps: 'ghog',
                             p2: 'hiur'
                         }
                     })
                 })
             </script>
+
         </div>    
         <div id="mb_6"></div>
     </main>
