--- a/index.html
+++ b/index.html
@@ -60,24 +60,22 @@
         <div id="mb_2">
             <!--AdFox START-->
             <!--yandex_test.kirsanov-->
-            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+            <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / test-back-1-->
+            <!--Категория: <не задана>-->
             <!--Тип баннера: Background-->
-            <!--Расположение: верх страницы-->
-            <div id="adfox_167774148560777915"></div>
+            <div id="adfox_167774194485615136"></div>
             <script>
                 window.yaContextCb.push(()=>{
                     Ya.adfoxCode.create({
                         ownerId: 1456522,
-                        containerId: 'adfox_167774148560777915',
+                        containerId: 'adfox_167774194485615136',
                         params: {
-                            pp: 'g',
-                            ps: 'ghog',
+                            p1: 'cxlyh',
                             p2: 'hiur'
                         }
                     })
                 })
             </script>
-
         </div>    
         <div id="mb_6"></div>
     </main>
