--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="mb_5"></div>
         </div>
         <div id="mb_1"></div>
-        <div id="mb_2">
+        <div class="mb_2">
             <!--AdFox START-->
             <!--yandex_test.kirsanov-->
             <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / test-back-1-->
