--- a/index.html
+++ b/index.html
@@ -60,25 +60,24 @@
         <div class="mb_2">
             <!--AdFox START-->
             <!--yandex_test.kirsanov-->
-            <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / test-back-1-->
-            <!--Категория: <не задана>-->
-            <!--Баннер: <не задана>-->
+            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
             <!--Тип баннера: Background-->
-            <div id="adfox_16777449080845432"></div>
+            <!--Расположение: середина страницы-->
+            <div id="adfox_167774615672323033"></div>
             <script>
                 window.yaContextCb.push(()=>{
                     Ya.adfoxCode.create({
                         ownerId: 1456522,
-                        containerId: 'adfox_16777449080845432',
+                        containerId: 'adfox_167774615672323033',
                         params: {
-                            p1: 'cxlyh',
-                            p2: 'hiur',
-                            pfc: 'ezvbd',
-                            pfb: 'nvffq'
+                            pp: 'h',
+                            ps: 'ghog',
+                            p2: 'hiur'
                         }
                     })
                 })
             </script>
+
         </div>    
         <div id="mb_6"></div>
     </main>
