--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div id="mb_6"></div>
     </main>
     <footer style="position: relative;">
-        <div id="foot_block">
+        <div class="foot_block">
 
         </div>
     </footer>    
