--- a/index.html
+++ b/index.html
@@ -60,18 +60,17 @@
         <div class="mb_2">
             <!--AdFox START-->
             <!--yandex_test.kirsanov-->
-            <!--Площадка: https://test-ilya.github.io/test_mark/ / * / *-->
+            <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / test-back-2-->
+            <!--Категория: <не задана>-->
             <!--Тип баннера: Background-->
-            <!--Расположение: середина страницы-->
-            <div id="adfox_167774615672323033"></div>
+            <div id="adfox_167774737575489395"></div>
             <script>
                 window.yaContextCb.push(()=>{
                     Ya.adfoxCode.create({
                         ownerId: 1456522,
-                        containerId: 'adfox_167774615672323033',
+                        containerId: 'adfox_167774737575489395',
                         params: {
-                            pp: 'h',
-                            ps: 'ghog',
+                            p1: 'cxlzx',
                             p2: 'hiur'
                         }
                     })
