--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     })
                 </script>
             </div>
-            <div id="mb_4"></div>
+            <div id="mb_4">
+               <a href="http://yandex.ru/ads/adfox/1456522/getCode?p1=cxmeg&p2=icwb&pfc=ezvbd&pfb=nvhsd"></a>
+            </div>
             <div id="mb_5"></div>
         </div>
         <div id="mb_1"></div>
@@ -78,7 +80,10 @@
             </script>
 
         </div>    
-        <div id="mb_6"></div>
+        <div id="mb_6">
+      
+        </div>
+        
     </main>
     <footer style="position: relative;">
         <div class="foot_block">
