--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </script>
             </div>
             <div id="mb_4">
-               <video src="http://yandex.ru/ads/adfox/1456522/getCode?p1=cxmeg&p2=icwb&pfc=ezvbd&pfb=nvhsd"></video>
+               <video src="https://yandex.ru/ads/adfox/1456522/getCode?p1=cxmeg&p2=icwb"></video>
             </div>
             <div id="mb_5"></div>
         </div>
