--- a/index.html
+++ b/index.html
@@ -54,7 +54,25 @@
                 </script>
             </div>
             <div id="mb_4">
-               <video src="https://yandex.ru/ads/adfox/1456522/getCode?p1=cxmeg&p2=icwb"></video>
+                <!--AdFox START-->
+                <!--yandex_test.kirsanov-->
+                <!--Площадка: https://test-ilya.github.io/test_mark/ / Основное / test-video-2-->
+                <!--Категория: <не задана>-->
+                <!--Тип баннера: test-video-2-->
+                <div id="adfox_167784413949799075"></div>
+                <script>
+                    window.yaContextCb.push(()=>{
+                        Ya.adfoxCode.create({
+                            ownerId: 1456522,
+                            containerId: 'adfox_167784413949799075',
+                            params: {
+                                p1: 'cxmpf',
+                                p2: 'icxr'
+                            }
+                        })
+                    })
+                </script>
+
             </div>
             <div id="mb_5"></div>
         </div>
