--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <head style="position: relative;">
         <div id="head_block">
             <h2 style="padding-top: 20px; padding-left: 200px;">
-                <a href="" style="text-decoration: none; color: white;">
+                <a href="/index2.html" style="text-decoration: none; color: white;">
                     TEST-ILYA</a>
             </h2>
             <ul id="head_list">
